[gd_scene load_steps=35 format=3 uid="uid://xrovrqf4lw6t"]

[ext_resource type="FontFile" uid="uid://coa7xhxar8yje" path="res://Fonts/VT323-Regular.ttf" id="1_5nkgl"]
[ext_resource type="Script" path="res://Scripts/ButtonSaves.gd" id="1_h2jka"]
[ext_resource type="Script" path="res://Scripts/MainMenuButtons.gd" id="1_sf4cd"]
[ext_resource type="Script" path="res://Scripts/MoveOutStart.gd" id="2_47bg0"]
[ext_resource type="StyleBox" uid="uid://bevpo2ximj3vy" path="res://Colors/LightModeColors/startbutton_bg.tres" id="4_0p2rx"]
[ext_resource type="StyleBox" uid="uid://bns3v7m57vbjb" path="res://Colors/LightModeColors/startbuttonpressed_bg.tres" id="5_m0qtu"]
[ext_resource type="StyleBox" uid="uid://gkrhghuo03xj" path="res://Colors/LightModeColors/settingsbutton_bg.tres" id="6_v6iht"]
[ext_resource type="StyleBox" uid="uid://c2kwu8heaacup" path="res://Colors/LightModeColors/settingsbuttonpressed_bg.tres" id="7_7hcqq"]
[ext_resource type="StyleBox" uid="uid://wgmqeoypai17" path="res://Colors/LightModeColors/quitbutton_bg.tres" id="8_81xcw"]
[ext_resource type="StyleBox" uid="uid://1jrwo6eqfda" path="res://Colors/LightModeColors/quitbuttonpressed_bg.tres" id="9_1cejv"]
[ext_resource type="Script" path="res://Scripts/Global.gd" id="9_t0plc"]
[ext_resource type="Script" path="res://Scripts/MoveGameIn.gd" id="10_ilj4s"]
[ext_resource type="Script" path="res://Scripts/MoveSettingsIn.gd" id="11_6h1pi"]
[ext_resource type="Script" path="res://Scripts/CharacterBody2D.gd" id="11_uhmcr"]
[ext_resource type="StyleBox" uid="uid://cujl751wvbvdu" path="res://Colors/LightModeColors/jump_button_sameindark.tres" id="13_vmnk4"]
[ext_resource type="AudioStream" uid="uid://bjyfr2eb7nyo" path="res://Audio/jump_effect.wav" id="14_blrbo"]
[ext_resource type="AudioStream" uid="uid://brq7i51xgdogu" path="res://Audio/death_sound.wav" id="15_gtrqm"]
[ext_resource type="Script" path="res://Scripts/Obstacle1.gd" id="16_nx2c6"]
[ext_resource type="AudioStream" uid="uid://1v8r3dru6fl0" path="res://Audio/flappbitmusicmaybe.mp3" id="16_oad6k"]
[ext_resource type="Texture2D" uid="uid://ce51hoqgo6n6s" path="res://Sprites/LightMode/sound_mute.png" id="16_psh0t"]
[ext_resource type="Shape2D" uid="uid://dop2wpqifwbb5" path="res://Sprites/pipe_shape.tres" id="16_wdhjf"]
[ext_resource type="Script" path="res://Scripts/Obstacle2.gd" id="17_3e1a1"]
[ext_resource type="AudioStream" uid="uid://bhaebdfx675ji" path="res://Audio/scoreUp.mp3" id="17_ky2tv"]
[ext_resource type="Texture2D" uid="uid://bsx57yw1a2vun" path="res://Sprites/LightMode/sound_unmute.png" id="17_qk0pc"]
[ext_resource type="PackedScene" uid="uid://d1tju6ftsjlob" path="res://Scenes/begin_menu.tscn" id="19_ggk60"]
[ext_resource type="Texture2D" uid="uid://oe704t5fxbn3" path="res://Sprites/LightMode/pause_button_lightmode.png" id="20_cvo8p"]
[ext_resource type="PackedScene" uid="uid://etmdcdep6btw" path="res://Scenes/pause_menu.tscn" id="25_8kcwq"]
[ext_resource type="Texture2D" uid="uid://bvh7d8lng6pf2" path="res://Sprites/LightMode/music_mute.svg" id="25_wkd5x"]
[ext_resource type="Texture2D" uid="uid://yahkbelkqghm" path="res://Sprites/LightMode/bird_idle_nostalgic_settingsbtn.png" id="26_3unjo"]
[ext_resource type="Texture2D" uid="uid://do014w57pj2ix" path="res://Sprites/LightMode/music_unmute.svg" id="26_io3oi"]
[ext_resource type="Texture2D" uid="uid://caq2giomeg4mn" path="res://Sprites/LightMode/bird_idle_settingsbtn.png" id="27_qramu"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2dyde"]
radius = 4.31943
height = 13.1013

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbg0o"]
size = Vector2(20, 14.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p2yvo"]
size = Vector2(50, 248)

[node name="Game" type="Node2D"]
script = ExtResource("1_h2jka")

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
visibility_layer = 512
offset_right = 576.0
offset_bottom = 1324.0
color = Color(0.858824, 0.847059, 0.807843, 1)

[node name="UI" type="Node2D" parent="."]

[node name="Is this needed?" type="Node2D" parent="UI"]

[node name="MenusAndGame" type="Node2D" parent="UI/Is this needed?"]
script = ExtResource("1_sf4cd")

[node name="Start" type="Node2D" parent="UI/Is this needed?/MenusAndGame"]
script = ExtResource("2_47bg0")

[node name="StartMenu" type="VBoxContainer" parent="UI/Is this needed?/MenusAndGame/Start"]
offset_top = 644.0
offset_right = 5760.0
offset_bottom = 2524.0
scale = Vector2(0.1, 0.1)

[node name="Start" type="Button" parent="UI/Is this needed?/MenusAndGame/Start/StartMenu"]
layout_mode = 2
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 600
theme_override_styles/normal = ExtResource("4_0p2rx")
theme_override_styles/hover = ExtResource("4_0p2rx")
theme_override_styles/pressed = ExtResource("5_m0qtu")
text = "PLAY"

[node name="Settings" type="Button" parent="UI/Is this needed?/MenusAndGame/Start/StartMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 600
theme_override_styles/normal = ExtResource("6_v6iht")
theme_override_styles/hover = ExtResource("6_v6iht")
theme_override_styles/pressed = ExtResource("7_7hcqq")
text = "SETTINGS"

[node name="Quit" type="Button" parent="UI/Is this needed?/MenusAndGame/Start/StartMenu"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 600
theme_override_styles/normal = ExtResource("8_81xcw")
theme_override_styles/hover = ExtResource("8_81xcw")
theme_override_styles/pressed = ExtResource("9_1cejv")
text = "QUIT"

[node name="Title" type="Label" parent="UI/Is this needed?/MenusAndGame/Start"]
texture_filter = 2
offset_top = 152.0
offset_right = 5760.0
offset_bottom = 885.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 750
text = "Flappbit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Subtitle" type="Label" parent="UI/Is this needed?/MenusAndGame/Start"]
offset_top = 224.0
offset_right = 5760.0
offset_bottom = 647.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.27451, 0.27451, 0.27451, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 420
text = "The Flappy Bird Clone"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameObjects" type="Node2D" parent="UI/Is this needed?/MenusAndGame"]
script = ExtResource("10_ilj4s")

[node name="CharacterBody2D" type="CharacterBody2D" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
position = Vector2(750, 451)
scale = Vector2(4.885, 5)
script = ExtResource("11_uhmcr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D"]
position = Vector2(0, 0.0805664)
rotation = -1.5708
shape = SubResource("CapsuleShape2D_2dyde")
one_way_collision = true
one_way_collision_margin = 12.0

[node name="Sprite2D" type="Sprite2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D"]
scale = Vector2(0.025, 0.025)
texture = ExtResource("27_qramu")

[node name="Ceiling" type="StaticBody2D" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
position = Vector2(864, -120)
scale = Vector2(28.753, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Ceiling"]
position = Vector2(0, -11.25)
shape = SubResource("RectangleShape2D_sbg0o")

[node name="Floor" type="Area2D" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
position = Vector2(863, 902)
scale = Vector2(28.753, 12)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Floor"]
position = Vector2(0, 2.625)
shape = SubResource("RectangleShape2D_sbg0o")

[node name="ColorRect" type="ColorRect" parent="UI/Is this needed?/MenusAndGame/GameObjects/Floor"]
offset_left = -10.0163
offset_top = -5.41667
offset_right = 10.9837
offset_bottom = 34.5833
color = Color(0.14902, 0.14902, 0.14902, 1)
metadata/_edit_use_anchors_ = true

[node name="Audio" type="Node2D" parent="UI/Is this needed?/MenusAndGame/GameObjects"]

[node name="DeathSoundPlayer" type="AudioStreamPlayer2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Audio"]
stream = ExtResource("15_gtrqm")
volume_db = 5.0
bus = &"SFX"

[node name="JumpSoundPlayer" type="AudioStreamPlayer2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Audio"]
stream = ExtResource("14_blrbo")
bus = &"SFX"

[node name="BGmusic" type="AudioStreamPlayer" parent="UI/Is this needed?/MenusAndGame/GameObjects/Audio"]
stream = ExtResource("16_oad6k")
volume_db = 1.0
bus = &"Music"

[node name="ScoreDing" type="AudioStreamPlayer2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Audio"]
stream = ExtResource("17_ky2tv")
volume_db = 2.0
bus = &"SFX"

[node name="Obstacles and button" type="Node2D" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
show_behind_parent = true

[node name="Obstacle1" type="Node2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button"]
position = Vector2(528, 270)
script = ExtResource("16_nx2c6")

[node name="Pipe1" type="Area2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1"]
position = Vector2(1237, 691)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/Pipe1"]
position = Vector2(-211, -79)
shape = ExtResource("16_wdhjf")

[node name="ColorRect" type="ColorRect" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/Pipe1"]
offset_left = -250.0
offset_top = -382.0
offset_right = -170.0
offset_bottom = 168.0
color = Color(0.215686, 0.764706, 0.121569, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/Pipe1"]
offset_left = -251.0
offset_top = -1196.0
offset_right = -171.0
offset_bottom = -646.0
color = Color(0.215686, 0.764706, 0.121569, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/Pipe1"]
position = Vector2(-211, -948)
shape = ExtResource("16_wdhjf")

[node name="ScoreAdder1" type="Area2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1"]
position = Vector2(-85, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/ScoreAdder1"]
position = Vector2(1130, 178)
shape = SubResource("RectangleShape2D_p2yvo")

[node name="Obstacle2" type="Node2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button"]
position = Vector2(1180, 210)
script = ExtResource("17_3e1a1")

[node name="Pipe1" type="Area2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2"]
position = Vector2(1237, 691)

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/Pipe1"]
position = Vector2(-211, -76)
shape = ExtResource("16_wdhjf")

[node name="ColorRect" type="ColorRect" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/Pipe1"]
offset_left = -250.0
offset_top = -377.0
offset_right = -170.0
offset_bottom = 123.0
color = Color(0.215686, 0.764706, 0.121569, 1)
metadata/_edit_use_anchors_ = true

[node name="ColorRect2" type="ColorRect" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/Pipe1"]
offset_left = -251.0
offset_top = -1143.0
offset_right = -171.0
offset_bottom = -643.0
color = Color(0.215686, 0.764706, 0.121569, 1)
metadata/_edit_use_anchors_ = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/Pipe1"]
position = Vector2(-211, -946)
shape = ExtResource("16_wdhjf")

[node name="ScoreAdder1" type="Area2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2"]
position = Vector2(-85, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/ScoreAdder1"]
position = Vector2(1133, 178)
shape = SubResource("RectangleShape2D_p2yvo")

[node name="Button" type="Button" parent="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button"]
offset_left = 576.0
offset_top = -1.0
offset_right = 1152.0
offset_bottom = 1323.0
theme_override_styles/normal = ExtResource("13_vmnk4")
theme_override_styles/hover = ExtResource("13_vmnk4")
theme_override_styles/pressed = ExtResource("13_vmnk4")
action_mode = 0

[node name="ScoreLabel" type="Label" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
offset_left = 640.0
offset_top = 8.0
offset_right = 1984.0
offset_bottom = 428.0
scale = Vector2(0.115, 0.077)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 420
text = "Score: 0"
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
offset_left = 940.0
offset_top = 7.0
offset_right = 2284.0
offset_bottom = 427.0
scale = Vector2(0.115, 0.077)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 420
text = "High: 0"
vertical_alignment = 1

[node name="PauseButton" type="Button" parent="UI/Is this needed?/MenusAndGame/GameObjects"]
offset_left = 1058.0
offset_top = 62.0
offset_right = 1116.0
offset_bottom = 120.0
icon = ExtResource("20_cvo8p")

[node name="Settings" type="Node2D" parent="UI/Is this needed?/MenusAndGame"]
script = ExtResource("11_6h1pi")

[node name="BackFromSettings" type="Button" parent="UI/Is this needed?/MenusAndGame/Settings"]
offset_left = -576.0
offset_top = 764.0
offset_right = 5184.0
offset_bottom = 1364.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 600
theme_override_styles/normal = ExtResource("8_81xcw")
theme_override_styles/hover = ExtResource("8_81xcw")
theme_override_styles/pressed = ExtResource("9_1cejv")
text = "BACK"

[node name="SettingsButtonVbox" type="VBoxContainer" parent="UI/Is this needed?/MenusAndGame/Settings"]
offset_left = -561.0
offset_top = 40.0
offset_right = 28.9999
offset_bottom = 1780.0
scale = Vector2(0.2, 0.2)

[node name="MuteSFXbtn" type="CheckButton" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox"]
layout_mode = 2
theme_override_icons/checked = ExtResource("16_psh0t")
theme_override_icons/unchecked = ExtResource("17_qk0pc")

[node name="MuteMUSICbtn" type="CheckButton" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox"]
layout_mode = 2
theme_override_icons/checked = ExtResource("25_wkd5x")
theme_override_icons/unchecked = ExtResource("26_io3oi")

[node name="ChangeSpritebtn" type="CheckButton" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox"]
layout_mode = 2
theme_override_icons/checked = ExtResource("26_3unjo")
theme_override_icons/unchecked = ExtResource("27_qramu")

[node name="SettingsButtonLabelVbox" type="VBoxContainer" parent="UI/Is this needed?/MenusAndGame/Settings"]
offset_left = -429.0
offset_top = 43.0
offset_right = 3771.0
offset_bottom = 4123.0
scale = Vector2(0.1, 0.1)
size_flags_stretch_ratio = 0.0
theme_override_constants/separation = 250

[node name="SFXsettingsLabel" type="Label" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonLabelVbox"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 750
text = "SFX"
vertical_alignment = 1

[node name="MusicSettingsLabel" type="Label" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonLabelVbox"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 750
text = "music"
vertical_alignment = 1

[node name="NMsettingsLabel" type="Label" parent="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonLabelVbox"]
texture_filter = 2
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_5nkgl")
theme_override_font_sizes/font_size = 750
text = "nostalgia mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Global" type="Node2D" parent="."]
script = ExtResource("9_t0plc")

[node name="BeginMenu" parent="." instance=ExtResource("19_ggk60")]
visible = false

[node name="PauseMenu" parent="." instance=ExtResource("25_8kcwq")]
visible = false

[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/Start/StartMenu/Start" to="UI/Is this needed?/MenusAndGame" method="_on_start_pressed"]
[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/Start/StartMenu/Settings" to="UI/Is this needed?/MenusAndGame" method="_on_settings_pressed"]
[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/Start/StartMenu/Quit" to="UI/Is this needed?/MenusAndGame" method="_on_quit_pressed"]
[connection signal="body_entered" from="UI/Is this needed?/MenusAndGame/GameObjects/Floor" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_floor_body_entered"]
[connection signal="body_entered" from="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/Pipe1" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_pipe_1_body_entered"]
[connection signal="body_entered" from="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle1/ScoreAdder1" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_score_adder_1_body_entered"]
[connection signal="body_entered" from="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/Pipe1" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_pipe_1_body_entered"]
[connection signal="body_entered" from="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Obstacle2/ScoreAdder1" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_score_adder_1_body_entered"]
[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/GameObjects/Obstacles and button/Button" to="UI/Is this needed?/MenusAndGame/GameObjects/CharacterBody2D" method="_on_button_pressed"]
[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/GameObjects/PauseButton" to="UI/Is this needed?/MenusAndGame/GameObjects" method="_on_pause_button_pressed"]
[connection signal="pressed" from="UI/Is this needed?/MenusAndGame/Settings/BackFromSettings" to="UI/Is this needed?/MenusAndGame" method="_on_back_from_settings_pressed"]
[connection signal="toggled" from="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox/MuteSFXbtn" to="Global" method="_on_check_button_toggled"]
[connection signal="toggled" from="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox/MuteMUSICbtn" to="Global" method="_on_mute_musi_cbtn_toggled"]
[connection signal="toggled" from="UI/Is this needed?/MenusAndGame/Settings/SettingsButtonVbox/ChangeSpritebtn" to="UI/Is this needed?/MenusAndGame" method="_on_change_spritebtn_toggled"]
